fixed some spacing

--- a/src/app/modules/pointtracker/containers/footer-controls/footer-controls.component.scss
+++ b/src/app/modules/pointtracker/containers/footer-controls/footer-controls.component.scss
@@ -6,12 +6,12 @@
 		justify-content: space-between;
 		align-items: center;
 		background-color: $primary;
-		padding: 12px 10px;
+		padding: 1.2rem 1rem 2rem 1rem;
 		color: $brightest;
 		position: fixed;
-		bottom: 0px;
-		left: 0px;
-		right: 0px;
+		bottom: 0;
+		left: 0;
+		right: 0;
 
 		pt-button {
 			&.btn-prev {
