--- a/src/app/modules/pointtracker/containers/game-stats/game-stats.component.scss
+++ b/src/app/modules/pointtracker/containers/game-stats/game-stats.component.scss
@@ -1,7 +1,7 @@
 
 :host {
 	.game-stats-wrapper {
-		padding: 0.8rem 1.2rem;
+		padding: 0.8rem 1.2rem 2rem 1.2rem;
 
 		h3 {
 			font-size: 1.6rem;
