--- a/src/app/modules/pointtracker/containers/lap-status/lap-status.component.scss
+++ b/src/app/modules/pointtracker/containers/lap-status/lap-status.component.scss
@@ -6,18 +6,18 @@
 		justify-content: space-between;
 		align-items: center;
 		background-color: $primary;
-		padding: 12px 10px;
+		padding: 1.2rem 1rem;
 
 		h3 {
 			font-size: 1.6rem;
-			margin: 0px;
-			margin-left: 4px;
+			margin: 0;
+			margin-left: 0.4rem;
 			color: $brightest;
 		}
 
 		.lap-indicators-wrapper {
 			pt-lap-indicator {
-				margin-left: 4px;
+				margin-left: 0.4rem;
 			}
 		}
 	}
